--- a/index.html
+++ b/index.html
@@ -16,19 +16,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Linux.usc.edu</h1>
-        <p class="header">USCLUG Website</p>
+        <h1 class="header">USC LUG</h1>
+        </header>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/usclug/linux.usc.edu/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/usclug/linux.usc.edu/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/usclug/linux.usc.edu">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/usclug">usclug</a></p>
-
-
-      </header>
       <section>
         <h3>Welcome to GitHub Pages.</h3>
 
