Initial website draft

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
           <a class="logo" href="#">USC LUG</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="#">About</a></li>
               <li><a href="people.html">People</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -33,11 +33,10 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h2>Hello!</h2>
-        <p>Welcome to the USC Linux Users Group website! We will be posting events here shortly so stay tuned!</p> 
-        <a href="https://docs.google.com/forms/d/1B-f9kD65tWFvm7IL9fStYEpxOIwDyWHglMXTmqI3nhE/viewform">Register</a>
+        <h2>About</h2>
+        <p>Club description goes here.</p>
+
       </div>
-      
     </div> <!-- /container -->
   </body>
 </html>
