--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="logo" href="#">USC LUG</a>
+          <a class="logo" href="index.html">USC LUG</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="people.html">People</a></li>
             </ul>
