--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="logo" href="#">USC LUG</a>
+          <a class="logo" href="index.html">USC LUG</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="#">About</a></li>
+              <li class="active"><a href="about.html">About</a></li>
               <li><a href="people.html">People</a></li>
             </ul>
           </div><!--/.nav-collapse -->
