Added link to mailing list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="hero-unit">
         <h2>Hello!</h2>
         <p>Welcome to the USC Linux Users Group website! We will be posting events here shortly so stay tuned!</p> 
-        <a href="https://docs.google.com/forms/d/1B-f9kD65tWFvm7IL9fStYEpxOIwDyWHglMXTmqI3nhE/viewform">Register</a>
+        <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a>
       </div>
       
     </div> <!-- /container -->
