--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h2>Hello!</h2>
-        <p>Welcome to the USC Linux Users Group website! We will be posting events here shortly so stay tuned!</p> 
+        <p>Welcome to the USC Linux Users Group website!</p>
+        <h3>First Event</h3>
+        <p>
+          Have you ever wanted to build a MEAN web stack but was never sure where to start? Well, you're in luck!
+          This Thursday, the USC LUG will be hosting an event to teach you just how to do that. Ankit Tyagi (Software
+          Engineer at Dun & Bradstreet Credibility Corp) and Sheldon Kwok (Software Engineer at Second Spectrum) will be
+          having a hands-on class to setup and build your own MEAN (Mongo, Express, AngularJS, Node) web app on a FREE
+          Amazon EC2 Micro Instance.
+        </p>
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a>
       </div>
       
