--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="hero-unit">
         <h2>Hello!</h2>
         <p>Welcome to the USC Linux Users Group website!</p>
-        <h3>First Event</h3>
+        <h3>Building a MEAN Web Stack</h3>
         <p>
           Have you ever wanted to build a MEAN web stack but was never sure where to start? Well, you're in luck!
           This Thursday, the USC LUG will be hosting an event to teach you just how to do that. Ankit Tyagi (Software
@@ -43,6 +43,12 @@
           having a hands-on class to setup and build your own MEAN (Mongo, Express, AngularJS, Node) web app on a FREE
           Amazon EC2 Micro Instance.
         </p>
+        
+        <h4>Technologies Used</h4>
+        <a href="http://www.mongodb.org/">MongoDB</a>
+        <a href="http://nodejs.org/"NodeJS</a>
+        <a href="http://expressjs.com/">ExpressJS</a>
+        <a href="http://angularjs.org/">AngularJS</a>
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a>
       </div>
       
