--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <h4>Technologies Used</h4>
         <a href="http://www.mongodb.org/">MongoDB</a>
-        <a href="http://nodejs.org/"NodeJS</a>
+        <a href="http://nodejs.org/">NodeJS</a>
         <a href="http://expressjs.com/">ExpressJS</a>
         <a href="http://angularjs.org/">AngularJS</a>
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a>
