--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         </p>
         
         <h4>Technologies Used</h4>
-        <a href="http://www.mongodb.org/">MongoDB</a> </br>
-        <a href="http://nodejs.org/">NodeJS</a> </br>
-        <a href="http://expressjs.com/">ExpressJS</a> </br>
-        <a href="http://angularjs.org/">AngularJS</a> </br>
+        <a href="http://www.mongodb.org/">MongoDB</a> <br>
+        <a href="http://nodejs.org/">NodeJS</a> <br>
+        <a href="http://expressjs.com/">ExpressJS</a> <br>
+        <a href="http://angularjs.org/">AngularJS</a> <br>
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a>
       </div>
       
