--- a/about.html
+++ b/about.html
@@ -24,19 +24,18 @@
               <li class="active"><a href="about.html">About</a></li>
               <li><a href="people.html">People</a></li>
             </ul>
-          </div><!--/.nav-collapse -->
+          </div>
         </div>
       </div>
     </div>
 
     <div class="container">
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h2>About</h2>
-        <p>Club description goes here.</p>
+        <p>Will be updated with more details later.</p>
 
       </div>
-    </div> <!-- /container -->
+    </div>
   </body>
 </html>
