--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><a href="about.html">About</a></li>
               <li><a href="people.html">People</a></li>
             </ul>
+            <img class="pull-right" style="height: 30px; margin-top: 5px;" src="./img/usc-shield.png">
           </div><!--/.nav-collapse -->
         </div>
       </div>
