--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About</a></li>
               <li><a href="people.html">People</a></li>
+              <li><a href="events.html">Events</a></li>
             </ul>
 
             <img class="pull-right" style="height: 30px; margin-top: 5px;" src="./img/usc-shield.png">
