Updated link to fb group

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           We'll be hosting several workshops related to Linux and software development this semester.    
         </p>
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a> <br>
-        <a href="https://www.facebook.com/groups/357239704394798/">Join the Facebook group</a>
+        <a href="https://www.facebook.com/groups/usclug/">Join the Facebook group</a>
 
         <!-- hacks -->
         <iframe style="margin-top: 40px; margin-left: 155px" src="http://www.flickr.com/slideShow/index.gne?group_id=&user_id=&set_id=72157636482500285&text=" frameBorder="0" width="500" height="500" scrolling="no"></iframe>
