--- a/index.html
+++ b/index.html
@@ -43,6 +43,36 @@
         <a href="https://mymaillists.usc.edu/sympa/info/usclug-l">Subscribe to USC-LUG mailing list</a> <br>
         <a href="https://www.facebook.com/groups/usclug/">Join the Facebook group</a>
 
+        <hr style="border-color:#555">
+
+        <h3>GIT: Git Isn't Tough</h3>
+        <h4>A Workshop on Version Control and Social Coding Using Git</h4>
+
+        <br>
+        <p>
+          Interactive workshop where you learn about the popular software Git and the workflow behind it, and how to use version control in a professional and collaborative setting.
+        </p>  
+        
+        <p>
+          Location: SLH 200 <br>
+          Date: Thursday, Oct 24th <br>
+          Time: 7pm to 9pm <br>
+          What to bring: your laptop (and charger) <br> 
+        </p>
+
+        <br>
+        <h4>Event Details</h4>
+
+        <p>
+          Have you ever heard about Git and are confused by the magic of it? Or are you an experienced Git user looking for some additional tips and tricks under your belt? This Thursday, USCLUG will be hosting a workshop to teach you how to use Git and show you that Git isn't tough. We'll teach you how Git works, discuss some best practices and show how you can collaboratively work with other programmers using version control. We'll also reveal some of the magic behind Git and how you can contribute using GitHub (and beef up your resume while you're at it)!
+
+          <br> <br>
+          We'll have lots of GitHub swag to giveaway, so be sure to come promptly at 7pm!
+        </p>
+
+        <hr style="border-color:#555">
+
+        <h3> Pictures from "Building a MEAN Web Stack" </h3>
         <!-- hacks -->
         <iframe style="margin-top: 40px; margin-left: 155px" src="http://www.flickr.com/slideShow/index.gne?group_id=&user_id=&set_id=72157636482500285&text=" frameBorder="0" width="500" height="500" scrolling="no"></iframe>
       </div>
