--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           Date: Thursday, Oct 24th <br>
           Time: 7pm to 9pm <br>
           What to bring: your laptop (and charger) <br> 
+          Facebook Event: <a href="https://www.facebook.com/events/452640964845019">https://www.facebook.com/events/452640964845019</a>
         </p>
 
         <br>
@@ -70,6 +71,14 @@
           We'll have lots of GitHub swag to giveaway, so be sure to come promptly at 7pm!
         </p>
 
+        <p>
+          If you want to actively participate in the workshop, make sure you:
+          <ol>
+            <li> Install git on your laptop by following the instructions: <a href="http://bit.ly/usclug_git-started">http://bit.ly/usclug_git-started</a></li>
+            <li> Create a GitHub Account: <a href="https://github.com/signup/free">Create a GitHub Account: https://github.com/signup/free</a></li>
+          </ol>
+
+        </p>
         <hr style="border-color:#555">
 
         <h3> Pictures from "Building a MEAN Web Stack" </h3>
