--- a/events.html
+++ b/events.html
@@ -35,6 +35,36 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
+        <h3>USCLUG goes to SoCal Linux Expo</h3>
+        <!-- <h4></h4> -->
+        <h4>Event Details</h4>
+
+        <p>
+          USC Linux Users Group will be heading to "SCALE: SoCal Linux Expo" on February 21-23, 2014 (this weekend!)
+        </p>
+
+        <p>
+          What: USCLUG (the people who brought you GIT and AWS cloud hosting workshops) will be heading to SCALE, the first and biggest open-source conference in Southern California. With lots of technical workshops, and a career expo to boot, there's lots of options for people interested and involved in software development and open-source. Sessions include workshops on OpenStack, PostgreSQL, Chef, Puppet, Cloud Technologies, DevOps, System Administration, Hardware Hacking, Security, etc. 
+        </p>
+
+        <p>
+          Everyone in the USC community is welcome, including students, faculty, staff and friends!
+          Use the discount code 'usc' to get 50% off! (Final total cost will be $35)
+        </p>
+
+
+        <p>
+          You're free to stop by just one of the days, or even all three, so we hope to see you there! Feel free to comment below if you have any questions, or need to coordinate carpools. :)
+        </p>
+      
+
+        Website: <a href="https://www.socallinuxexpo.org/scale12x">https://www.socallinuxexpo.org/scale12x</a>
+        <p>
+          Check out the workshop schedule at <a href="https://www.socallinuxexpo.org/scale12x/schedule">https://www.socallinuxexpo.org/scale12x/schedule</a>.
+        </p>
+         
+        <hr style="border-color:#555">
+
         <h3>GIT: Git Isn't Tough</h3>
         <h4>A Workshop on Version Control and Social Coding Using Git</h4>
 
