--- a/index.html
+++ b/index.html
@@ -45,40 +45,34 @@
 
         <hr style="border-color:#555">
 
-        <h3>GIT: Git Isn't Tough</h3>
-        <h4>A Workshop on Version Control and Social Coding Using Git</h4>
-
-        <br>
-        <p>
-          Interactive workshop where you learn about the popular software Git and the workflow behind it, and how to use version control in a professional and collaborative setting.
-        </p>  
-        
-        <p>
-          Location: SLH 200 <br>
-          Date: Thursday, Oct 24th <br>
-          Time: 7pm to 9pm <br>
-          What to bring: your laptop (and charger) <br> 
-          Facebook Event: <a href="https://www.facebook.com/events/452640964845019">https://www.facebook.com/events/452640964845019</a>
-        </p>
-
-        <br>
+        <h3>USCLUG goes to SoCal Linux Expo</h3>
+        <!-- <h4></h4> -->
         <h4>Event Details</h4>
 
         <p>
-          Have you ever heard about Git and are confused by the magic of it? Or are you an experienced Git user looking for some additional tips and tricks under your belt? This Thursday, USCLUG will be hosting a workshop to teach you how to use Git and show you that Git isn't tough. We'll teach you how Git works, discuss some best practices and show how you can collaboratively work with other programmers using version control. We'll also reveal some of the magic behind Git and how you can contribute using GitHub (and beef up your resume while you're at it)!
-
-          <br> <br>
-          We'll have lots of GitHub swag to giveaway, so be sure to come promptly at 7pm!
+          USC Linux Users Group will be heading to "SCALE: SoCal Linux Expo" on February 21-23, 2014 (this weekend!)
         </p>
 
         <p>
-          If you want to actively participate in the workshop, make sure you:
-          <ol>
-            <li> Install git on your laptop by following the instructions: <a href="http://bit.ly/usclug_git-started">http://bit.ly/usclug_git-started</a></li>
-            <li> Create a GitHub Account: <a href="https://github.com/signup/free">Create a GitHub Account: https://github.com/signup/free</a></li>
-          </ol>
-
+          What: USCLUG (the people who brought you GIT and AWS cloud hosting workshops) will be heading to SCALE, the first and biggest open-source conference in Southern California. With lots of technical workshops, and a career expo to boot, there's lots of options for people interested and involved in software development and open-source. Sessions include workshops on OpenStack, PostgreSQL, Chef, Puppet, Cloud Technologies, DevOps, System Administration, Hardware Hacking, Security, etc. 
         </p>
+
+        <p>
+          Everyone in the USC community is welcome, including students, faculty, staff and friends!
+          Use the discount code 'usc' to get 50% off! (Final total cost will be $35)
+        </p>
+
+
+        <p>
+          You're free to stop by just one of the days, or even all three, so we hope to see you there! Feel free to comment below if you have any questions, or need to coordinate carpools. :)
+        </p>
+      
+
+        Website: <a href="https://www.socallinuxexpo.org/scale12x">https://www.socallinuxexpo.org/scale12x</a>
+        <p>
+          Check out the workshop schedule at <a href="https://www.socallinuxexpo.org/scale12x/schedule">https://www.socallinuxexpo.org/scale12x/schedule</a>.
+        </p>
+
         <hr style="border-color:#555">
 
         <h3> Pictures from "Building a MEAN Web Stack" </h3>
