this better work

--- a/events/2/index.html
+++ b/events/2/index.html
@@ -10,11 +10,11 @@
     <title>USCLUG</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../../css/bootstrap.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom CSS here -->
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../../css/styles.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
@@ -30,20 +30,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../">USC Linux Users Group</a>
+                <a class="navbar-brand" href="../../">USC Linux Users Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../">Home</a>
+                    <li><a href="../../">Home</a>
                     </li>
-                    <li><a href="../about/">About</a>
+                    <li><a href="../../about/">About</a>
                     </li>               
-                    <li><a href="../resources/">Resources</a>
+                    <li><a href="../../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../"><img src="../images/usc.png"></a>
+                <a class="navbar-brand logo" href="../../"><img src="../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -59,25 +59,28 @@
             <!-- main content -->
             <div class="col-sm-8">
 
-                <h2><a href="../events/3">USCLUG goes to SoCal Linux Expo</a>
+                <h2><a href="../../events/2">"GIT: Git Isn't Tough": Git Version Control Workshop</a>
                 </h2>
 
-                <p><i class="fa fa-calendar"></i> Time: Friday February 21 - Sunday February 23, 2014</p>
-                <p><i class="fa fa-globe"></i> Location: Hilton LAX</p>
-                <p><i class="fa fa-facebook-square"></i> <a href="https://www.facebook.com/events/741509015868132/">Facebook Event</a></p>
+                <p><i class="fa fa-calendar"></i> Time: Thursday October 24, 2013 7-9pm</p>
+                <p><i class="fa fa-globe"></i> Location: SLH200</p>
+                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/452640964845019">Facebook Event</a></p>
                
-                <p>USCLUG (the people who brought you GIT and AWS cloud hosting workshops) will be heading to SCALE, the first and biggest open-source conference in Southern California. With lots of technical workshops, and a career expo to boot, there's lots of options for people interested and involved in software development and open-source. Sessions include workshops on OpenStack, PostgreSQL, Chef, Puppet, Cloud Technologies, DevOps, System Administration, Hardware Hacking, Security, etc. </p>
+                <p>Interactive workshop where you learn about the popular software Git and the workflow behind it, and how to use version control in a professional and collaborative setting.</p>
 
                 <hr>
 
-                <p>Everyone in the USC community is welcome, including students, faculty, staff and friends!</p>
+                <p>Have you ever heard about Git and are confused by the magic of it? Or are you an experienced Git user looking for some additional tips and tricks under your belt? This Thursday, USCLUG will be hosting a workshop to teach you how to use Git and show you that Git isn't tough. We'll teach you how Git works, discuss some best practices and show how you can collaboratively work with other programmers using version control. We'll also reveal some of the magic behind Git and how you can contribute using GitHub (and beef up your resume while you're at it)!</p>
 
-                <p>Be sure to register at <a href="http://socallinuxexpo.org/scale12x">this link</a> and use the discount code 'usc' to get 50% off! (Final total cost will be $35)</p>
+                <p>We'll have lots of GitHub swag to giveaway, so be sure to come promptly at 7pm!</p>
 
-                <p>NOTE: We're raffling two passes away to the expo, so check in the comments in the FB group! :)</p>
+                <hr> 
 
-                <p>Check out the workshop schedule at <a href="https://www.socallinuxexpo.org/scale12x/schedule">as well</a>.</p>
+                <iframe width="560" height="315" src="http://www.youtube.com/embed/F_QVE2CKcig?rel=0" frameborder="0" allowfullscreen></iframe>
 
+                <hr>
+
+                <iframe src="https://docs.google.com/presentation/d/1034_rFqEAME-gYid8qEL6Fp7ORGeHvaYuIqqEoURKqo/embed?start=false&loop=false&delayms=30000" frameborder="0" width="480" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
             </div>
 
@@ -92,7 +95,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='../../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
