--- a/events/3/index.html
+++ b/events/3/index.html
@@ -10,11 +10,11 @@
     <title>USCLUG</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../../css/bootstrap.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom CSS here -->
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../../css/styles.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
@@ -30,27 +30,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../">USC Linux Users Group</a>
+                <a class="navbar-brand" href="../../">USC Linux Users Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../">Home</a>
+                    <li><a href="../../">Home</a>
                     </li>
-                    <li><a href="../about/">About</a>
+                    <li><a href="../../about/">About</a>
                     </li>               
-                    <li><a href="../resources/">Resources</a>
+                    <li><a href="../../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../"><img src="../images/usc.png"></a>
+                <a class="navbar-brand logo" href="../../"><img src="../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
     <!-- end of header --> 
-
     <!-- content -->
     <div class="container">
 
@@ -59,27 +58,25 @@
             <!-- main content -->
             <div class="col-sm-8">
 
-                <h2><a href="../events/1">"Building a MEAN Web Stack": AWS Cloud Hosting Workshop</a>
+                <h2><a href="../../events/3">USCLUG goes to SoCal Linux Expo</a>
                 </h2>
 
-                <p><i class="fa fa-calendar"></i> Time: Thursday October 3, 2013 7-9pm</p>
-                <p><i class="fa fa-globe"></i> Location: ZHS159</p>
-                <p><i class="fa fa-facebook-square"></i> <a href="https://www.facebook.com/events/588878991172344">Facebook Event</a></p>
+                <p><i class="fa fa-calendar"></i> Time: Friday February 21 - Sunday February 23, 2014</p>
+                <p><i class="fa fa-globe"></i> Location: Hilton LAX</p>
+                <p><i class="fa fa-facebook-square"></i> <a href="https://www.facebook.com/events/741509015868132/">Facebook Event</a></p>
                
-                <p>Interactive workshop where you learn about hosting javascript apps on the cloud (Amazon EC2).</p>
+                <p>USCLUG (the people who brought you GIT and AWS cloud hosting workshops) will be heading to SCALE, the first and biggest open-source conference in Southern California. With lots of technical workshops, and a career expo to boot, there's lots of options for people interested and involved in software development and open-source. Sessions include workshops on OpenStack, PostgreSQL, Chef, Puppet, Cloud Technologies, DevOps, System Administration, Hardware Hacking, Security, etc. </p>
 
                 <hr>
 
-                <p>Have you ever wanted to build a a web app on the cloud, but was not sure where to start? Are you a web development newbie? This Thursday, USCLUG will be hosting a workshop to teach you how to build a 'MEAN' javascript application on Amazon Web Services!</p>
+                <p>Everyone in the USC community is welcome, including students, faculty, staff and friends!</p>
 
-                <p>Ankit Tyagi (Software Engineer at Dun &amp Bradstreet Credibility Corp) and Sheldon Kwok (Software Engineer at Second Spectrum) will help you setup and build your own 'MEAN' (MongoDB, Express, AngularJS, Node.js) web app on a free Amazon EC2 Micro Instance.</p>
+                <p>Be sure to register at <a href="http://socallinuxexpo.org/scale12x">this link</a> and use the discount code 'usc' to get 50% off! (Final total cost will be $35)</p>
 
-                <p>Be sure to bring your laptop and charger!
-                ...and no experience in web development required! Show up and learn. :D</p>
+                <p>NOTE: We're raffling two passes away to the expo, so check in the comments in the FB group! :)</p>
 
-                <hr> 
+                <p>Check out the workshop schedule at <a href="https://www.socallinuxexpo.org/scale12x/schedule">as well</a>.</p>
 
-                <iframe width="560" height="315" src="http://www.youtube.com/embed/fifHnqF2Sps?rel=0" frameborder="0" allowfullscreen></iframe>)
 
             </div>
 
@@ -94,7 +91,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='../../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
