--- a/events/4/index.html
+++ b/events/4/index.html
@@ -10,11 +10,11 @@
     <title>USCLUG</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../../css/bootstrap.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom CSS here -->
-    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../../css/styles.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
@@ -30,20 +30,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../">USC Linux Users Group</a>
+                <a class="navbar-brand" href="../../">USC Linux Users Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../">Home</a>
+                    <li><a href="../../">Home</a>
                     </li>
-                    <li><a href="../about/">About</a>
+                    <li><a href="../../about/">About</a>
                     </li>               
-                    <li><a href="../resources/">Resources</a>
+                    <li><a href="../../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../"><img src="../images/usc.png"></a>
+                <a class="navbar-brand logo" href="../../"><img src="../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -59,28 +59,28 @@
             <!-- main content -->
             <div class="col-sm-8">
 
-                <h2><a href="../events/2">"GIT: Git Isn't Tough": Git Version Control Workshop</a>
+                <!-- first entry-->
+                <h2><a href="../../events/4">Using the Command Line: The Basics, Tips and Tricks</a>
                 </h2>
 
-                <p><i class="fa fa-calendar"></i> Time: Thursday October 24, 2013 7-9pm</p>
-                <p><i class="fa fa-globe"></i> Location: SLH200</p>
-                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/452640964845019">Facebook Event</a></p>
+                <p><i class="fa fa-calendar"></i> Time: Thursday March 13, 2014 6:30-8pm</p>
+                <p><i class="fa fa-globe"></i> Location: THH102</p>
+                <p><i class="fa fa-facebook-square"></i> <a href="https://facebook.com/events/1431168193795022">Facebook Event</a></p>
                
-                <p>Interactive workshop where you learn about the popular software Git and the workflow behind it, and how to use version control in a professional and collaborative setting.</p>
+                <p>Interactive workshop where you learn how to use the command line (terminal) in Linux and Unix (like Mac OS X) systems. You'll learn about the basics that every developer and programmer needs, and learn the commands you need to be productive in Linux and Unix environments.</p>
 
                 <hr>
 
-                <p>Have you ever heard about Git and are confused by the magic of it? Or are you an experienced Git user looking for some additional tips and tricks under your belt? This Thursday, USCLUG will be hosting a workshop to teach you how to use Git and show you that Git isn't tough. We'll teach you how Git works, discuss some best practices and show how you can collaboratively work with other programmers using version control. We'll also reveal some of the magic behind Git and how you can contribute using GitHub (and beef up your resume while you're at it)!</p>
+                <p>USCLUG will be hosting a workshop this week about the command line interface (terminal) this Thursday! Intended for beginning programmers and non-programmers, this workshop will give you the foundation necessary to start being a better developer and using Linux. We'll start with the basics, and then get to a point where we can start creating basic websites on servers.</p>
 
-                <p>We'll have lots of GitHub swag to giveaway, so be sure to come promptly at 7pm!</p>
+                <p>This workshop will serve as the foundation for our later workshops, so be sure to come out and learn! :D</p>
 
-                <hr> 
-
-                <iframe width="560" height="315" src="http://www.youtube.com/embed/F_QVE2CKcig?rel=0" frameborder="0" allowfullscreen></iframe>
-
-                <hr>
-
-                <iframe src="https://docs.google.com/presentation/d/1034_rFqEAME-gYid8qEL6Fp7ORGeHvaYuIqqEoURKqo/embed?start=false&loop=false&delayms=30000" frameborder="0" width="480" height="389" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <p>If you want to actively participate in the workshop, we would like you to be actually working in Linux. You can do this by using a Virtual Machine and use Linux if you are not already using it.
+                    <ol>
+                        <li>Download the Linux Virtual Machine at <a href="http://lug.usc.edu/dropbox/usclug-vm.ova">this link.</a></li>
+                        <li>Install VirtualBox and import the VM (username: usclug / pw: tux).</li>
+                    </ol>
+                </p>
 
             </div>
 
@@ -95,7 +95,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='../../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
