--- a/events/3/index.html
+++ b/events/3/index.html
@@ -43,7 +43,7 @@
                     <li><a href="../../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../../"><img src="../images/usc.png"></a>
+                <a class="navbar-brand logo" href="../../"><img src="../../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
