--- a/resources/index.html
+++ b/resources/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>USCLUG</title>
+    <title>USCLUG - Resources</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom CSS here -->
-    <link href="../../css/styles.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="http://linux.usc.edu/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="http://linux.usc.edu/favicon-16x16.png" sizes="16x16" />
+    <link href="../css/styles.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="http://linux.usc.edu/favicon-32x32.png" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="http://linux.usc.edu/favicon-16x16.png" sizes="16x16" />
 </head>
 
 <body>
@@ -30,20 +30,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../">USC Linux Users Group</a>
+                <a class="navbar-brand" href="/">USC Linux Users Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../../">Home</a>
+                    <li><a href="../">Home</a>
                     </li>
-                    <li><a href="../../about/">About</a>
+                    <li><a href="../about/">About</a>
                     </li>               
-                    <li><a href="../../resources/">Resources</a>
+                    <li class="active"><a href="../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../../"><img src="../../images/usc.png"></a>
+                <a class="navbar-brand logo" href="../"><img src="../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -59,27 +59,14 @@
             <!-- main content -->
             <div class="col-sm-8">
 
-                <h2><a href="../../events/1">"Building a MEAN Web Stack": AWS Cloud Hosting Workshop</a>
-                </h2>
+                <h2>Resources</h2>
 
-                <p><i class="fa fa-calendar"></i> Time: Thursday October 3, 2013 7-9pm</p>
-                <p><i class="fa fa-globe"></i> Location: ZHS159</p>
-                <p><i class="fa fa-facebook-square"></i> <a href="https://www.facebook.com/events/588878991172344">Facebook Event</a></p>
-               
-                <p>Interactive workshop where you learn about hosting javascript apps on the cloud (Amazon EC2).</p>
+                <p>Here are some great resources for Linux and Open-Source development!</p>
 
                 <hr>
 
-                <p>Have you ever wanted to build a a web app on the cloud, but was not sure where to start? Are you a web development newbie? This Thursday, USCLUG will be hosting a workshop to teach you how to build a 'MEAN' javascript application on Amazon Web Services!</p>
+                <p><a href="http://lug.usc.edu/dropbox/usclug-vm.ova">Light-weight Virtual Machine</a>
 
-                <p>Ankit Tyagi (Software Engineer at Dun &amp Bradstreet Credibility Corp) and Sheldon Kwok (Software Engineer at Second Spectrum) will help you setup and build your own 'MEAN' (MongoDB, Express, AngularJS, Node.js) web app on a free Amazon EC2 Micro Instance.</p>
-
-                <p>Be sure to bring your laptop and charger!
-                ...and no experience in web development required! Show up and learn. :D</p>
-
-                <hr> 
-
-                <iframe width="560" height="315" src="http://www.youtube.com/embed/fifHnqF2Sps?rel=0" frameborder="0" allowfullscreen></iframe>)
 
             </div>
 
@@ -89,12 +76,12 @@
                 <!-- /well -->
                 <div class="well">
 
-                    <h4><i class="fa fa-linux"></i> <span id="black"><a href='../'>USC Linux Users Group</a></span></h4>
+                    <h4><i class="fa fa-linux"></i> <span id="black"><a href='/'>USC Linux Users Group</a></span></h4>
                     <p>We're a group of USC students passionate about everything Linux and Open Source!</p>
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
@@ -126,8 +113,8 @@
     <!-- end of content -->
 
     <!-- JavaScript -->
-    <script src="../../js/jquery-1.10.2.js"></script>
-    <script src="../../js/bootstrap.min.js"></script>
+    <script src="../js/jquery-1.10.2.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
