--- a/events/4/index.html
+++ b/events/4/index.html
@@ -15,8 +15,8 @@
 
     <!-- Custom CSS here -->
     <link href="../../css/styles.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="http://linux.usc.edu/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="http://linux.usc.edu/favicon-16x16.png" sizes="16x16" />
 </head>
 
 <body>
@@ -127,8 +127,8 @@
     <!-- end of content -->
 
     <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../../js/jquery-1.10.2.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
 </body>
 
 </html>
