updating usc link + copy

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
                     <li><a href="../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../"><img src="../images/usc.png"></a>
+                <a class="navbar-brand logo" href="http://www.usc.edu/"><img src="../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -61,7 +61,7 @@
 
                 <h2>About Us</h2>
 
-                <p>We are the USC Linux Users Group (aka USCLUG) and we're an organization at USC dedicated to creating and developing the Linux and Open-Source Community at USC. We're a group of students at USC passionate about everything Linux and Open-Source, and we'll be constantly hosting technical workshops related to Linux and software development</p>
+                <p>We are the USC Linux Users Group (aka USCLUG) and we're an organization at the University of Southern California dedicated to creating and developing the Linux and Open-Source Community at USC. We're a group of students at USC passionate about everything Linux and Open-Source, and we'll be constantly hosting technical workshops related to Linux and software development.</p>
 
                 <p>There are no formal meetings for USCLUG, but if you would like to get involved or help with our workshops, get in touch with us. :)</p>
 
@@ -86,7 +86,7 @@
                 <div class="well">
 
                     <h4><i class="fa fa-linux"></i> <span id="black"><a href='/'>USC Linux Users Group</a></span></h4>
-                    <p>We're a group of USC students passionate about everything Linux and Open Source!</p>
+                    <p>We're a group of students at the University of Southern California passionate about everything Linux and Open Source!</p>
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
