--- a/events/3/index.html
+++ b/events/3/index.html
@@ -43,7 +43,7 @@
                     <li><a href="../../resources/">Resources</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="../../"><img src="../../images/usc.png"></a>
+                <a class="navbar-brand logo" href="http://www.usc.edu/"><img src="../../images/usc.png"></a>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -87,7 +87,7 @@
                 <div class="well">
 
                     <h4><i class="fa fa-linux"></i> <span id="black"><a href='../'>USC Linux Users Group</a></span></h4>
-                    <p>We're a group of USC students passionate about everything Linux and Open Source!</p>
+                    <p>We're a group of students at the University of Southern California passionate about everything Linux and Open Source!</p>
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
