Added faber link

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
                     <ul>
                         <li>President: <a href="http://jaywhang.com">Jay Whang</a></li>
                         <li>Webmaster/Secretary: <a href="http://johnnyjung.com">Johnny Jung</a></li>
-                        <li>Faculty Advisor: Ted Faber</li>
+                        <li>Faculty Advisor: <a href="http://www.isi.edu/~faber/">Ted Faber</a></li>
                         <li>PhD Advisor: Rami Al-Ghanmi</li>
                     </ul>
                 </p>
