--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='#'>Advanced Command Line Workshop</a> (TBD Thursday, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
