--- a/events/4/index.html
+++ b/events/4/index.html
@@ -82,6 +82,10 @@
                     </ol>
                 </p>
 
+                <hr> 
+
+                <iframe src="https://docs.google.com/presentation/d/1i-d_Mv23La68ouBS9G3yxO2qtqFvZ1BjQ8zXOb56dFY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
             </div>
 
             <!-- sidebar -->
@@ -95,7 +99,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='../../events/4'>Using the Command Line: The Basics, Tips and Tricks</a> (March 13, 6:30-8pm)</p>
+                    <p><a href='#'>Advanced Command Line Workshop</a> (TBD Thursday, 6:30-8pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
