--- a/events/3/index.html
+++ b/events/3/index.html
@@ -91,7 +91,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='#'>Advanced Command Line Workshop</a> (TBD Thursday, 7-9pm)</p>
+                    <p><a href='#'>Open Source Open Mic Night</a> (May 2nd, Thursday, 7-9pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
