--- a/events/1/index.html
+++ b/events/1/index.html
@@ -94,7 +94,7 @@
 
                     <hr>
                     <h4><i class="fa fa-calendar"></i> Upcoming Events</h4>
-                    <p><a href='#'>Open Source Open Mic Night</a> (May 2nd, Thursday, 7-9pm)</p>
+                    <p><a href='#'>Open Source Open Mic Night</a> (May 1st, Thursday, 7-9pm)</p>
                     <hr>
                     <h4>Contact Us</h4>
 
